<resources>
    <string name="app_name">CCS Control</string>

    <!--NAVIGATION DRAWER-->
    <string name="navigation_drawer_open">Open side menu</string>
    <string name="navigation_drawer_close">Close side menu</string>

    <string name="nav_communication">Contact</string>
    <string name="nav_counters">Counter</string>
    <string name="nav_account">Account</string>
    <string name="nav_information">Information</string>
    <string name="nav_state">State</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_send">Send</string>
    <string name="nav_logout">Logout</string>

    <!--TOOLS-->
    <string name="checkbox_online">Online</string>
    <string name="checkbox_has_portions">Has portions</string>

    <!--TOAST-->
    <string name="toast_network">Unable to get data, check network connection</string>
    <string name="toast_server">Server inaccessible, try again later</string>
    <string name="toast_data_sent_ok">Data send successfully</string>
    <string name="toast_data_sent_err">There was an error trying to send data</string>
    <string name="toast_data_sent_nokey">Key is not inserted, data wasn\'t sent</string>
    <!--EMAIL-->
    <string name="email_email">Send email</string>
    <string name="email_message1">Message from</string>
    <string name="email_message2">Counter</string>

    <!--LOGIN ACTIVITY-->
    <string name="login_header">Sign in</string>
    <string name="login_login">Login</string>
    <string name="login_password">Password</string>
    <string name="login_enter">Sign in</string>

    <!--INFO FRAGMENT-->
    <string name="info_portions">Portions:</string>
    <string name="info_straits">Straits:</string>
    <string name="info_sync">Sync:</string>
    <string name="info_start">Start:</string>
    <string name="info_status_ok" translatable="false">ONLINE</string>
    <string name="info_status_err" translatable="false">OFFLINE</string>

    <!--STATE FRAGMENT-->
    <string name="state_sync">Sync:</string>
    <string name="state_start">Start:</string>
    <string name="state_server" >Comm.:</string>
    <string name="state_server_ok" translatable="false">OK</string>
    <string name="state_server_err" translatable="false">ERROR</string>
    <string name="state_sd" >Memory:</string>
    <string name="state_temp">Temp:</string>
    <string name="state_humid">Humid.:</string>
    <string name="state_celsius" translatable="false">%1$dC</string>
    <string name="state_percent" translatable="false">%1$d%%</string>
    <string name="state_null_time" translatable="false">00.00.0000 00:00:00</string>

    <!--SETTINGS FRAGMENT-->
    <string name="settings_strait_time">Strait</string>
    <string name="settings_portion_time">Portion</string>
    <string name="settings_max_portion_time" >2x Portion</string>
    <string name="settings_volume" >Volume</string>
    <string name="settings_gss1" translatable="false">GSS1</string>
    <string name="settings_gss2" translatable="false">GSS2</string>
    <string name="settings_gss3" translatable="false">GSS3</string>
    <string name="settings_save" >Save</string>
    <string name="settings_seconds">%1$dsec</string>
</resources>
