<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_monitor_black_24dp"
                android:title="@string/nav_information"/>
        <item
                android:id="@+id/nav_state"
                android:icon="@drawable/ic_zap_black_24dp"
                android:title="@string/nav_state"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings"/>
    </group>
    <item android:title="@string/nav_communication">
        <menu>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/nav_send"/>
        </menu>
    </item>
    <item android:title="@string/nav_account">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/nav_logout"/>
        </menu>
    </item>
</menu>
