<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/background"
             tools:context=".SettingsFragment"
             android:tag="settingsFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="@drawable/rectangle_background"
            android:layout_margin="15dp" android:padding="10dp" android:focusableInTouchMode="true"
            android:gravity="center_horizontal">
        <Spinner
                android:id="@+id/spinner"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:popupBackground="@drawable/rounded_rectangle"
                android:gravity="top|center"
                android:background="@drawable/rounded_rectangle" android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                android:minHeight="65dp"/>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:gravity="center_horizontal">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="110dp" android:background="@drawable/rounded_rectangle"
                        android:layout_width="110dp"
                        android:gravity="center" android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp" android:layout_marginBottom="15dp" android:paddingBottom="6dp"
                        android:paddingLeft="4dp" android:paddingRight="4dp" android:paddingTop="2dp">
                    <TextView
                            android:text="@string/settings_strait_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView"
                            android:textAlignment="center" android:fontFamily="@font/flipbash"
                            android:textColor="@color/colorPrimaryDark"/>
                    <ImageView
                            android:src="@drawable/water"
                            android:layout_width="50dp"
                            android:layout_height="50dp" android:id="@+id/imageView9"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:id="@+id/editText" android:textColor="@color/colorPrimaryDark"
                            android:background="@android:color/transparent" android:textAlignment="center"
                            android:fontFamily="@font/flipbash" android:text="6"
                            android:textCursorDrawable="@null"
                            android:imeOptions="actionDone"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="110dp" android:background="@drawable/rounded_rectangle"
                        android:layout_width="110dp"
                        android:gravity="center" android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp" android:layout_marginBottom="15dp" android:paddingBottom="6dp"
                        android:paddingLeft="4dp" android:paddingRight="4dp" android:paddingTop="2dp">
                    <TextView
                            android:text="@string/settings_portion_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView7"
                            android:textAlignment="center" android:fontFamily="@font/flipbash"
                            android:textColor="@color/colorPrimaryDark"/>
                    <ImageView
                            android:src="@drawable/cup"
                            android:layout_width="50dp"
                            android:layout_height="50dp" android:id="@+id/imageView12"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:id="@+id/editText2" android:textColor="@color/colorPrimaryDark"
                            android:background="@android:color/transparent" android:textAlignment="center"
                            android:fontFamily="@font/flipbash" android:text="26"
                            android:textCursorDrawable="@null"
                            android:imeOptions="actionDone"/>
                </LinearLayout>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:gravity="center_horizontal">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="110dp" android:background="@drawable/rounded_rectangle"
                        android:layout_width="110dp"
                        android:gravity="center" android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp" android:layout_marginBottom="15dp" android:paddingBottom="6dp"
                        android:paddingLeft="4dp" android:paddingRight="4dp" android:paddingTop="2dp">
                    <TextView
                            android:text="@string/settings_max_portion_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView8"
                            android:textAlignment="center" android:fontFamily="@font/flipbash"
                            android:textColor="@color/colorPrimaryDark"/>
                    <ImageView
                            android:src="@drawable/cup"
                            android:layout_width="50dp"
                            android:layout_height="50dp" android:id="@+id/imageView16"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:id="@+id/editText3" android:textColor="@color/colorPrimaryDark"
                            android:background="@android:color/transparent" android:textAlignment="center"
                            android:fontFamily="@font/flipbash" android:text="40"
                            android:textCursorDrawable="@null"
                            android:imeOptions="actionDone"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="110dp" android:background="@drawable/rounded_rectangle"
                        android:layout_width="110dp"
                        android:gravity="center" android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp" android:layout_marginBottom="15dp" android:paddingBottom="6dp"
                        android:paddingLeft="4dp" android:paddingRight="4dp" android:paddingTop="2dp">
                    <TextView
                            android:text="@string/settings_volume"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView9"
                            android:textAlignment="center" android:fontFamily="@font/flipbash"
                            android:textColor="@color/colorPrimaryDark"/>
                    <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp" android:id="@+id/imageView17" android:tint="@color/colorCup"
                            app:srcCompat="@drawable/ic_volume_up_black_24dp"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:id="@+id/editText4" android:textColor="@color/colorPrimaryDark"
                            android:background="@android:color/transparent" android:textAlignment="center"
                            android:fontFamily="@font/flipbash" android:text="10"
                            android:textCursorDrawable="@null"
                            android:imeOptions="actionDone"/>
                </LinearLayout>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:gravity="center_horizontal">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="110dp" android:background="@drawable/rounded_rectangle"
                        android:layout_width="110dp"
                        android:gravity="center" android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp" android:paddingTop="2dp" android:paddingLeft="4dp"
                        android:paddingRight="4dp" android:paddingBottom="6dp">
                    <TextView
                            android:text="@string/settings_gss1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView10"
                            android:textAlignment="center" android:fontFamily="@font/flipbash"
                            android:textColor="@color/colorPrimaryDark"/>
                    <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp" android:id="@+id/imageView18" android:tint="@color/colorCup"
                            app:srcCompat="@drawable/ic_zap_black_24dp"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:gravity="bottom"
                            android:layout_marginLeft="3dp" android:layout_marginRight="3dp">
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:id="@+id/editText5" android:text="50" android:textAlignment="center"
                                android:textAllCaps="false"
                                android:fontFamily="@font/flipbash" android:textColor="@color/colorPrimaryDark"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:textCursorDrawable="@null"
                                android:imeOptions="actionDone"/>
                        <TextView
                                android:text="-"
                                android:layout_width="wrap_content"
                                android:id="@+id/textView12"
                                android:layout_weight="1" android:textSize="36sp"
                                android:textColor="@color/colorPrimaryDark" android:textAlignment="center"
                                android:layout_height="wrap_content" android:textStyle="bold"/>
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:id="@+id/editText6" android:layout_weight="1" android:text="55"
                                android:textAlignment="center" android:textAllCaps="false"
                                android:textColor="@color/colorPrimaryDark" android:fontFamily="@font/flipbash"
                                android:background="@android:color/transparent"
                                android:textCursorDrawable="@null"
                                android:imeOptions="actionDone"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="110dp" android:background="@drawable/rounded_rectangle"
                        android:layout_width="110dp"
                        android:gravity="center" android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp" android:paddingTop="2dp" android:paddingLeft="4dp"
                        android:paddingRight="4dp" android:paddingBottom="6dp">
                    <TextView
                            android:text="@string/settings_gss2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView11"
                            android:textAlignment="center" android:fontFamily="@font/flipbash"
                            android:textColor="@color/colorPrimaryDark"/>
                    <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp" android:id="@+id/imageView19" android:tint="@color/colorCup"
                            app:srcCompat="@drawable/ic_zap_black_24dp"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:gravity="bottom"
                            android:layout_marginLeft="3dp" android:layout_marginRight="3dp">
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:id="@+id/editText7" android:text="50" android:textAlignment="center"
                                android:textAllCaps="false"
                                android:fontFamily="@font/flipbash" android:textColor="@color/colorPrimaryDark"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:textCursorDrawable="@null"
                                android:imeOptions="actionDone"/>
                        <TextView
                                android:text="-"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/textView13"
                                android:layout_weight="1" android:textSize="36sp"
                                android:textColor="@color/colorPrimaryDark" android:textAlignment="center"
                                android:textStyle="bold"/>
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:id="@+id/editText8" android:layout_weight="1" android:text="55"
                                android:textAlignment="center" android:textAllCaps="false"
                                android:textColor="@color/colorPrimaryDark" android:fontFamily="@font/flipbash"
                                android:background="@android:color/transparent"
                                android:textCursorDrawable="@null"
                                android:imeOptions="actionDone"/>
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
        </TableLayout>
        <Button
                android:text="@string/settings_save"
                android:layout_width="200dp"
                android:layout_height="wrap_content" android:id="@+id/button" android:layout_marginTop="10dp"
                android:background="@drawable/rounded_rectangle_green" android:textColor="@color/colorLight1"
                android:fontFamily="@font/flipbash"/>
    </LinearLayout>
</FrameLayout>